appId: com.natkibe.musicplayerpro
---
- launchApp
- tapOn: "Settings"
- tapOn: "Toggle floating controls"
- tapOn: "Close"
